# document_embed

./: .gitignore  Cargo.toml  GPU_TODO.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
pdfium/: pdfium.tgz
scripts/: generate-homebrew-formula.sh
src/: engine.rs  error.rs  id_codec.rs  lib.rs  metadata.rs  options.rs
tests/: id_codec.rs  smoke.php
