[package]
name = "pdfwm_php_ext"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
publish = false

[lib]
name = "pdfwm"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ext-php-rs = { version = "=0.15.12", features = ["anyhow"] }
image = { version = "0.25.6", features = ["jpeg", "png"] }
lopdf = "0.39"
num-bigint = "0.4"
num-traits = "0.2"
pdfium-render = { version = "0.9.1", features = ["image_latest", "thread_safe"] }
printpdf = { version = "0.9.1", default-features = false, features = ["jpeg", "png"] }
thiserror = "1"
trustmark = "0.2.2"

[profile.release]
strip = "debuginfo"
lto = "thin"
codegen-units = 1
